<resources>
    <string name="app_name">ExpenseManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_expense">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount*</string>
    <string name="amount_example">Amount(Rs.)</string>
    <string name="date">Date*</string>
    <string name="category">Category*</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings</string>
    <string name="tag">Tags</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="time_format">HH:MM</string>
    <string name="time">Time*</string>
    <string name="add_note">Add a note(Max 50 characters)</string>
    <string-array name="repeat_modes">
        <item>Once</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
        <item>Repear Yearly</item>
    </string-array>
    <string-array name="category">
        <item>Utilites</item>
        <item>Food/Drinks</item>
        <item>Life</item>
    </string-array>

    <string-array name="tag">
        <item>movie</item>
        <item>Drinks</item>
        <item>grocery</item>
    </string-array>

    <string name="repeat">Repeat Mode</string>
    <string name="title">Title*</string>
    <string name="my_transaction">My Transactions</string>
    <string name="deleted_transaction">Transaction Deleted</string>
    <string name="hint">Type Here</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
